--- a/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LeNet-5 in Keras"
+    "# Deep Convolutional Neural Network in Keras"
    ]
   },
   {
@@ -119,7 +119,12 @@
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Conv2D(20, 7, padding = 'same', activation ='relu'))\n",
-    "model.add(Conv2D(20, 7, activation ='relu'))\n",
+    "model.add(Conv2D(20, 7, padding = 'same', activation ='relu'))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(28, 2, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(28, 2, activation ='relu'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
@@ -151,22 +156,30 @@
       "_________________________________________________________________\n",
       "conv2d_3 (Conv2D)            (None, 14, 14, 20)        15700     \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 8, 8, 20)          19620     \n",
+      "conv2d_4 (Conv2D)            (None, 14, 14, 20)        19620     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 4, 4, 20)          0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 20)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 4, 4, 20)          0         \n",
+      "dropout_2 (Dropout)          (None, 7, 7, 20)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 320)               0         \n",
+      "conv2d_5 (Conv2D)            (None, 7, 7, 28)          2268      \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1024)              328704    \n",
+      "conv2d_6 (Conv2D)            (None, 6, 6, 28)          3164      \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 1024)              0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 28)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 3, 3, 28)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 252)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              259072    \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 1024)              0         \n",
       "_________________________________________________________________\n",
       "dense_2 (Dense)              (None, 10)                10250     \n",
       "=================================================================\n",
-      "Total params: 378,658\n",
-      "Trainable params: 378,658\n",
+      "Total params: 314,458\n",
+      "Trainable params: 314,458\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -240,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-relu-no-augmentation-50-epochs\")"
+    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-relu-no-augmentation-30-epochs-new-layer\")"
    ]
   },
   {
@@ -261,65 +274,65 @@
      "text": [
       "Train on 34020 samples, validate on 3780 samples\n",
       "Epoch 1/30\n",
-      "34020/34020 [==============================] - 254s - loss: 0.2421 - acc: 0.9216 - val_loss: 0.0505 - val_acc: 0.9841\n",
+      "34020/34020 [==============================] - 152s - loss: 0.3441 - acc: 0.8856 - val_loss: 0.0596 - val_acc: 0.9831\n",
       "Epoch 2/30\n",
-      "34020/34020 [==============================] - 258s - loss: 0.0754 - acc: 0.9771 - val_loss: 0.0457 - val_acc: 0.9852\n",
+      "34020/34020 [==============================] - 152s - loss: 0.1047 - acc: 0.9678 - val_loss: 0.0441 - val_acc: 0.9876\n",
       "Epoch 3/30\n",
-      "34020/34020 [==============================] - 250s - loss: 0.0564 - acc: 0.9831 - val_loss: 0.0376 - val_acc: 0.9902\n",
+      "34020/34020 [==============================] - 153s - loss: 0.0759 - acc: 0.9774 - val_loss: 0.0362 - val_acc: 0.9902\n",
       "Epoch 4/30\n",
-      "34020/34020 [==============================] - 251s - loss: 0.0465 - acc: 0.9850 - val_loss: 0.0359 - val_acc: 0.9905\n",
+      "34020/34020 [==============================] - 154s - loss: 0.0660 - acc: 0.9811 - val_loss: 0.0386 - val_acc: 0.9902\n",
       "Epoch 5/30\n",
-      "34020/34020 [==============================] - 256s - loss: 0.0380 - acc: 0.9882 - val_loss: 0.0303 - val_acc: 0.9910\n",
+      "34020/34020 [==============================] - 152s - loss: 0.0555 - acc: 0.9832 - val_loss: 0.0319 - val_acc: 0.9918\n",
       "Epoch 6/30\n",
-      "34020/34020 [==============================] - 193s - loss: 0.0306 - acc: 0.9903 - val_loss: 0.0423 - val_acc: 0.9884\n",
+      "34020/34020 [==============================] - 263s - loss: 0.0482 - acc: 0.9849 - val_loss: 0.0254 - val_acc: 0.9926\n",
       "Epoch 7/30\n",
-      "34020/34020 [==============================] - 132s - loss: 0.0267 - acc: 0.9914 - val_loss: 0.0337 - val_acc: 0.9902\n",
+      "34020/34020 [==============================] - 240s - loss: 0.0428 - acc: 0.9871 - val_loss: 0.0337 - val_acc: 0.9897\n",
       "Epoch 8/30\n",
-      "34020/34020 [==============================] - 120s - loss: 0.0227 - acc: 0.9925 - val_loss: 0.0376 - val_acc: 0.9902\n",
+      "34020/34020 [==============================] - 179s - loss: 0.0366 - acc: 0.9887 - val_loss: 0.0274 - val_acc: 0.9921\n",
       "Epoch 9/30\n",
-      "34020/34020 [==============================] - 137s - loss: 0.0199 - acc: 0.9941 - val_loss: 0.0251 - val_acc: 0.9934\n",
+      "34020/34020 [==============================] - 156s - loss: 0.0356 - acc: 0.9893 - val_loss: 0.0285 - val_acc: 0.9921\n",
       "Epoch 10/30\n",
-      "34020/34020 [==============================] - 136s - loss: 0.0163 - acc: 0.9949 - val_loss: 0.0294 - val_acc: 0.9921\n",
+      "34020/34020 [==============================] - 213s - loss: 0.0286 - acc: 0.9909 - val_loss: 0.0227 - val_acc: 0.9950\n",
       "Epoch 11/30\n",
-      "34020/34020 [==============================] - 126s - loss: 0.0177 - acc: 0.9947 - val_loss: 0.0233 - val_acc: 0.9926\n",
+      "34020/34020 [==============================] - 161s - loss: 0.0268 - acc: 0.9920 - val_loss: 0.0270 - val_acc: 0.9929\n",
       "Epoch 12/30\n",
-      "34020/34020 [==============================] - 130s - loss: 0.0122 - acc: 0.9961 - val_loss: 0.0248 - val_acc: 0.9929\n",
+      "34020/34020 [==============================] - 2088s - loss: 0.0255 - acc: 0.9919 - val_loss: 0.0192 - val_acc: 0.9942\n",
       "Epoch 13/30\n",
-      "34020/34020 [==============================] - 158s - loss: 0.0116 - acc: 0.9963 - val_loss: 0.0310 - val_acc: 0.9931\n",
+      "34020/34020 [==============================] - 556s - loss: 0.0196 - acc: 0.9943 - val_loss: 0.0260 - val_acc: 0.9913\n",
       "Epoch 14/30\n",
-      "34020/34020 [==============================] - 205s - loss: 0.0100 - acc: 0.9970 - val_loss: 0.0247 - val_acc: 0.9937\n",
+      "34020/34020 [==============================] - 215s - loss: 0.0203 - acc: 0.9933 - val_loss: 0.0277 - val_acc: 0.9923\n",
       "Epoch 15/30\n",
-      "34020/34020 [==============================] - 156s - loss: 0.0111 - acc: 0.9968 - val_loss: 0.0244 - val_acc: 0.9939\n",
+      "34020/34020 [==============================] - 168s - loss: 0.0195 - acc: 0.9936 - val_loss: 0.0233 - val_acc: 0.9929\n",
       "Epoch 16/30\n",
-      "34020/34020 [==============================] - 139s - loss: 0.0091 - acc: 0.9969 - val_loss: 0.0275 - val_acc: 0.9931\n",
+      "34020/34020 [==============================] - 160s - loss: 0.0171 - acc: 0.9945 - val_loss: 0.0280 - val_acc: 0.9921\n",
       "Epoch 17/30\n",
-      "34020/34020 [==============================] - 136s - loss: 0.0072 - acc: 0.9977 - val_loss: 0.0294 - val_acc: 0.9931\n",
+      "34020/34020 [==============================] - 184s - loss: 0.0163 - acc: 0.9947 - val_loss: 0.0242 - val_acc: 0.9934\n",
       "Epoch 18/30\n",
-      "34020/34020 [==============================] - 139s - loss: 0.0068 - acc: 0.9977 - val_loss: 0.0263 - val_acc: 0.9944\n",
+      "34020/34020 [==============================] - 180s - loss: 0.0130 - acc: 0.9958 - val_loss: 0.0256 - val_acc: 0.9937\n",
       "Epoch 19/30\n",
-      "34020/34020 [==============================] - 139s - loss: 0.0070 - acc: 0.9975 - val_loss: 0.0258 - val_acc: 0.9947\n",
+      "34020/34020 [==============================] - 179s - loss: 0.0145 - acc: 0.9954 - val_loss: 0.0260 - val_acc: 0.9934\n",
       "Epoch 20/30\n",
-      "34020/34020 [==============================] - 136s - loss: 0.0064 - acc: 0.9977 - val_loss: 0.0264 - val_acc: 0.9947\n",
+      "34020/34020 [==============================] - 185s - loss: 0.0114 - acc: 0.9963 - val_loss: 0.0248 - val_acc: 0.9944\n",
       "Epoch 21/30\n",
-      "34020/34020 [==============================] - 138s - loss: 0.0056 - acc: 0.9980 - val_loss: 0.0247 - val_acc: 0.9942\n",
+      "34020/34020 [==============================] - 163s - loss: 0.0115 - acc: 0.9964 - val_loss: 0.0279 - val_acc: 0.9939\n",
       "Epoch 22/30\n",
-      "34020/34020 [==============================] - 139s - loss: 0.0039 - acc: 0.9987 - val_loss: 0.0251 - val_acc: 0.9947\n",
+      "34020/34020 [==============================] - 165s - loss: 0.0114 - acc: 0.9962 - val_loss: 0.0265 - val_acc: 0.9934\n",
       "Epoch 23/30\n",
-      "34020/34020 [==============================] - 136s - loss: 0.0044 - acc: 0.9986 - val_loss: 0.0268 - val_acc: 0.9942\n",
+      "34020/34020 [==============================] - 165s - loss: 0.0106 - acc: 0.9965 - val_loss: 0.0278 - val_acc: 0.9937\n",
       "Epoch 24/30\n",
-      "34020/34020 [==============================] - 145s - loss: 0.0047 - acc: 0.9983 - val_loss: 0.0242 - val_acc: 0.9944\n",
+      "34020/34020 [==============================] - 175s - loss: 0.0118 - acc: 0.9961 - val_loss: 0.0292 - val_acc: 0.9937\n",
       "Epoch 25/30\n",
-      "34020/34020 [==============================] - 144s - loss: 0.0040 - acc: 0.9986 - val_loss: 0.0254 - val_acc: 0.9939\n",
+      "34020/34020 [==============================] - 161s - loss: 0.0105 - acc: 0.9963 - val_loss: 0.0265 - val_acc: 0.9937\n",
       "Epoch 26/30\n",
-      "34020/34020 [==============================] - 136s - loss: 0.0030 - acc: 0.9989 - val_loss: 0.0252 - val_acc: 0.9947\n",
+      "34020/34020 [==============================] - 192s - loss: 0.0098 - acc: 0.9969 - val_loss: 0.0264 - val_acc: 0.9942\n",
       "Epoch 27/30\n",
-      "34020/34020 [==============================] - 138s - loss: 0.0027 - acc: 0.9991 - val_loss: 0.0267 - val_acc: 0.9942\n",
+      "34020/34020 [==============================] - 176s - loss: 0.0085 - acc: 0.9971 - val_loss: 0.0252 - val_acc: 0.9944\n",
       "Epoch 28/30\n",
-      "34020/34020 [==============================] - 138s - loss: 0.0037 - acc: 0.9989 - val_loss: 0.0263 - val_acc: 0.9942\n",
+      "34020/34020 [==============================] - 204s - loss: 0.0097 - acc: 0.9967 - val_loss: 0.0246 - val_acc: 0.9939\n",
       "Epoch 29/30\n",
-      "34020/34020 [==============================] - 139s - loss: 0.0037 - acc: 0.9987 - val_loss: 0.0253 - val_acc: 0.9939\n",
+      "34020/34020 [==============================] - 173s - loss: 0.0079 - acc: 0.9975 - val_loss: 0.0258 - val_acc: 0.9947\n",
       "Epoch 30/30\n",
-      "34020/34020 [==============================] - 142s - loss: 0.0029 - acc: 0.9991 - val_loss: 0.0267 - val_acc: 0.9942\n"
+      "34020/34020 [==============================] - 186s - loss: 0.0077 - acc: 0.9974 - val_loss: 0.0262 - val_acc: 0.9942\n"
      ]
     }
    ],
@@ -332,7 +345,7 @@
     "#                            callbacks=[annealer, tensorboard])\n",
     "\n",
     "hist = model.fit(X_train, y_train, batch_size = 32,\n",
-    "                           epochs = 50,\n",
+    "                           epochs = 30,\n",
     "                           verbose = 1,\n",
     "                           validation_split = 0.1,\n",
     "                           callbacks=[annealer, tensorboard])"
@@ -354,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0281, final accuracy: 0.9931\n"
+      "4160/4200 [============================>.] - ETA: 0sFinal loss: 0.0324, final accuracy: 0.9929\n"
      ]
     }
    ],
@@ -376,13 +389,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test = np.loadtxt('kaggle/datasets/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
+    "# X_test = np.loadtxt('kaggle/datasets/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "# X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
-    "predictions = model.predict(X_test, verbose = 2)\n",
-    "predictions = np.argmax(predictions, axis = 1)\n",
+    "# predictions = model.predict(X_test, verbose = 2)\n",
+    "# predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-relu-no-augmentation-50-epochs.csv', index = False, header = True)"
+    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-relu-no-augmentation-50-epochs-new-layer.csv', index = False, header = True)"
    ]
   },
   {
