--- a/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLUs.ipynb
+++ b/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLUs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LeNet-5 in Keras"
+    "# Deep Convolutional Neural Network in Keras"
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.datasets import mnist\n",
@@ -71,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +146,12 @@
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(20, 7, activation ='ReLU_s'))\n",
+    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 2, activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
@@ -150,9 +163,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 16)        272       \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 16)        4112      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 14, 14, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 14, 14, 20)        15700     \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 14, 14, 20)        19620     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 20)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 7, 7, 20)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 7, 7, 28)          2268      \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 6, 6, 28)          3164      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 28)          0         \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 3, 3, 28)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 252)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              259072    \n",
+      "_________________________________________________________________\n",
+      "dropout_4 (Dropout)          (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                10250     \n",
+      "=================================================================\n",
+      "Total params: 314,458\n",
+      "Trainable params: 314,458\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -166,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,11 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-ReLUs-no-augmentation-100-epochs\")"
+    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-ReLUs-no-augmentation-30-epochs-new-layer\")"
    ]
   },
   {
@@ -233,9 +292,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 34020 samples, validate on 3780 samples\n",
+      "Epoch 1/30\n",
+      "34020/34020 [==============================] - 150s - loss: 0.2878 - acc: 0.9044 - val_loss: 0.0682 - val_acc: 0.9791\n",
+      "Epoch 2/30\n",
+      "34020/34020 [==============================] - 145s - loss: 0.0828 - acc: 0.9756 - val_loss: 0.0499 - val_acc: 0.9862\n",
+      "Epoch 3/30\n",
+      "34020/34020 [==============================] - 147s - loss: 0.0588 - acc: 0.9824 - val_loss: 0.0332 - val_acc: 0.9910\n",
+      "Epoch 4/30\n",
+      "34020/34020 [==============================] - 145s - loss: 0.0487 - acc: 0.9855 - val_loss: 0.0332 - val_acc: 0.9905\n",
+      "Epoch 5/30\n",
+      "34020/34020 [==============================] - 151s - loss: 0.0409 - acc: 0.9883 - val_loss: 0.0284 - val_acc: 0.9910\n",
+      "Epoch 6/30\n",
+      "34020/34020 [==============================] - 149s - loss: 0.0370 - acc: 0.9894 - val_loss: 0.0270 - val_acc: 0.9929\n",
+      "Epoch 7/30\n",
+      "34020/34020 [==============================] - 152s - loss: 0.0299 - acc: 0.9907 - val_loss: 0.0328 - val_acc: 0.9915\n",
+      "Epoch 8/30\n",
+      "34020/34020 [==============================] - 155s - loss: 0.0261 - acc: 0.9919 - val_loss: 0.0264 - val_acc: 0.9918\n",
+      "Epoch 9/30\n",
+      "34020/34020 [==============================] - 149s - loss: 0.0214 - acc: 0.9940 - val_loss: 0.0273 - val_acc: 0.9915\n",
+      "Epoch 10/30\n",
+      "34020/34020 [==============================] - 166s - loss: 0.0212 - acc: 0.9936 - val_loss: 0.0279 - val_acc: 0.9907\n",
+      "Epoch 11/30\n",
+      "34020/34020 [==============================] - 151s - loss: 0.0178 - acc: 0.9947 - val_loss: 0.0216 - val_acc: 0.9934\n",
+      "Epoch 12/30\n",
+      "34020/34020 [==============================] - 152s - loss: 0.0154 - acc: 0.9952 - val_loss: 0.0264 - val_acc: 0.9929\n",
+      "Epoch 13/30\n",
+      "34020/34020 [==============================] - 148s - loss: 0.0157 - acc: 0.9954 - val_loss: 0.0197 - val_acc: 0.9931\n",
+      "Epoch 14/30\n",
+      "34020/34020 [==============================] - 144s - loss: 0.0134 - acc: 0.9957 - val_loss: 0.0209 - val_acc: 0.9947\n",
+      "Epoch 15/30\n",
+      "34020/34020 [==============================] - 149s - loss: 0.0112 - acc: 0.9968 - val_loss: 0.0254 - val_acc: 0.9931\n",
+      "Epoch 16/30\n",
+      "34020/34020 [==============================] - 145s - loss: 0.0103 - acc: 0.9965 - val_loss: 0.0221 - val_acc: 0.9939\n",
+      "Epoch 17/30\n",
+      "34020/34020 [==============================] - 152s - loss: 0.0087 - acc: 0.9974 - val_loss: 0.0228 - val_acc: 0.9934\n",
+      "Epoch 18/30\n",
+      "34020/34020 [==============================] - 152s - loss: 0.0089 - acc: 0.9968 - val_loss: 0.0211 - val_acc: 0.9939\n",
+      "Epoch 19/30\n",
+      "34020/34020 [==============================] - 151s - loss: 0.0074 - acc: 0.9978 - val_loss: 0.0225 - val_acc: 0.9926\n",
+      "Epoch 20/30\n",
+      "34020/34020 [==============================] - 144s - loss: 0.0070 - acc: 0.9980 - val_loss: 0.0187 - val_acc: 0.9944\n",
+      "Epoch 21/30\n",
+      "34020/34020 [==============================] - 146s - loss: 0.0068 - acc: 0.9981 - val_loss: 0.0196 - val_acc: 0.9947\n",
+      "Epoch 22/30\n",
+      "34020/34020 [==============================] - 147s - loss: 0.0055 - acc: 0.9982 - val_loss: 0.0190 - val_acc: 0.9947\n",
+      "Epoch 23/30\n",
+      "34020/34020 [==============================] - 149s - loss: 0.0059 - acc: 0.9982 - val_loss: 0.0203 - val_acc: 0.9942\n",
+      "Epoch 24/30\n",
+      "34020/34020 [==============================] - 155s - loss: 0.0052 - acc: 0.9984 - val_loss: 0.0191 - val_acc: 0.9952\n",
+      "Epoch 25/30\n",
+      "34020/34020 [==============================] - 155s - loss: 0.0047 - acc: 0.9984 - val_loss: 0.0171 - val_acc: 0.9952\n",
+      "Epoch 26/30\n",
+      "34020/34020 [==============================] - 148s - loss: 0.0037 - acc: 0.9986 - val_loss: 0.0197 - val_acc: 0.9955\n",
+      "Epoch 27/30\n",
+      "34020/34020 [==============================] - 142s - loss: 0.0038 - acc: 0.9989 - val_loss: 0.0209 - val_acc: 0.9944\n",
+      "Epoch 28/30\n",
+      "34020/34020 [==============================] - 149s - loss: 0.0038 - acc: 0.9988 - val_loss: 0.0196 - val_acc: 0.9950\n",
+      "Epoch 29/30\n",
+      "34020/34020 [==============================] - 165s - loss: 0.0033 - acc: 0.9989 - val_loss: 0.0200 - val_acc: 0.9947\n",
+      "Epoch 30/30\n",
+      "34020/34020 [==============================] - 154s - loss: 0.0037 - acc: 0.9989 - val_loss: 0.0202 - val_acc: 0.9942\n"
+     ]
+    }
+   ],
    "source": [
     "# hist = model.fit_generator(datagen.flow(X_train, y_train, batch_size = 64),\n",
     "#                            steps_per_epoch = 300,\n",
@@ -260,9 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0283, final accuracy: 0.9931\n"
+     ]
+    }
+   ],
    "source": [
     "final_loss, final_acc = model.evaluate(X_val, y_val, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
@@ -277,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +422,7 @@
     "predictions = model.predict(X_test, verbose = 2)\n",
     "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-no-augmentation-100-epochs.csv', index = False, header = True)"
+    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-no-augmentation-30-epochs-new-layer.csv', index = False, header = True)"
    ]
   },
   {
